--- a/site/wp-content/themes/catapult/sass/blog.scss
+++ b/site/wp-content/themes/catapult/sass/blog.scss
@@ -4,6 +4,7 @@
 @import "catapult-common";
 @import "catapult-floater";
 @import "catapult-header";
+@import "catapult-drawer";
 @import "catapult-blog";
 @import "catapult-footer";
 @import "boilerplate-2";
