--- a/site/wp-content/themes/catapult/sass/_catapult-locations.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-locations.scss
@@ -19,23 +19,9 @@
 		@include innerShadow(0px, 5px, 5px, 0px, 0.7);
 	}
 	
-	.locations__content {
-		@include transition(0.5s);
+	.drawer__content {
 		background: url(../img/homepage/locations/world.svg) top left no-repeat;
 		background-size: 100% auto;
-		position: relative;
-		overflow: hidden;
-		-webkit-perspective: 1000;
-    -webkit-backface-visibility: hidden;
-		
-		
-		.locations__content__title {
-			margin: 0 auto;
-			padding-top: 55px;
-	    color: #fff;
-	    letter-spacing: 3px;
-	    @include textShadow(2px, 2px, 5px, rgba(0,0,0,0.9));
-		}
 	}
 
 	.locations-markers {
